# torchLoom

./: .gitignore  .lintrunner.toml  .watchmanconfig  AGENTS.md  AGENTS_onboarding.md  AGENTs.md  CONTRIBUTING.md  CONTRIBUTORS.md  GUI_testing.md  HEARTBEAT_FUNCTIONALITY.md  LICENSE  README.md  THREADLET_DEMO_README.md  TODO.md  UI_INTEGRATION_VERIFICATION.md  codex.txt  demo.md  demo_integrated.py  demo_ui.html  demo_weavelet.py  environment.yaml  example_trainer.py  lightning_test.py  onboarding.md  plan.md  pyproject.toml  requirements.txt  requirements_gpu.txt  setup_codex.sh  setup_linux.sh  setup_linux_cpu.sh  setup_linux_gpu.sh  setup_mac.sh  spawn_threadlet.py  start_torchloom.py  test_device_registration.py  test_heartbeat.py  test_stream_publish.py  test_ui_connection.html  test_ui_integration.py  (+4 more)
checkpoints/: demo_model_epoch_0.pt  demo_model_epoch_10.pt  demo_model_epoch_20.pt  demo_model_epoch_30.pt  demo_model_epoch_40.pt  demo_model_epoch_50.pt  demo_model_epoch_60.pt  demo_model_epoch_70.pt  demo_model_epoch_80.pt  demo_model_epoch_90.pt
docs/: CONTRIBUTORS.md  TODO.md  default_handlers.md  weavelet_default_handlers.md
examples/: mnist.py  weavelet_default_handlers.py  weaver_basic_usage.py
nats/: nats.conf
scripts/: preamble.sh  requirements_cpu.txt  requirements_gpu.txt  setup_mac.sh  start_cli.sh
tests/: README.md  __init__.py  conftest.py  test_cli_integration.py  test_config_info.py  test_integration.py  test_integration_real_nats.py  test_monitor_cli.py  test_server_integration.py  test_weavelet_callback.py  test_weaver.py
torchLoom.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
(+294 files in other folders)
