[project]
name = "torchLoom"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.7"
]

[project.urls]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "black",
    "pyre-check",
    "parameterized",
    "expecttest",
    "numpy",
    "torchx"
]

[tool.isort]
multi_line_output = 3
combine_as_imports = true

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
timeout = 60
timeout_method = "thread"
